; ModuleID = '/home/carl/AnghaBench/mongoose/examples/api_server/extr_sqlite3.c_yy_accept.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/api_server/extr_sqlite3.c_yy_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@sqlite3ParserARG_FETCH = common dso_local global i32 0, align 4
@yyTraceFILE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c"%sAccept!\0A\00", align 1
@yyTracePrompt = common dso_local global i8* null, align 8
@sqlite3ParserARG_STORE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @yy_accept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @yy_accept(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load i32, i32* @sqlite3ParserARG_FETCH, align 4
  %4 = load i64, i64* @yyTraceFILE, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i64, i64* @yyTraceFILE, align 8
  %8 = load i8*, i8** @yyTracePrompt, align 8
  %9 = call i32 @fprintf(i64 %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %8)
  br label %10

10:                                               ; preds = %6, %1
  br label %11

11:                                               ; preds = %16, %10
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp sge i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %11
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %18 = call i32 @yy_pop_parser_stack(%struct.TYPE_4__* %17)
  br label %11

19:                                               ; preds = %11
  %20 = load i32, i32* @sqlite3ParserARG_STORE, align 4
  ret void
}

declare dso_local i32 @fprintf(i64, i8*, i8*) #1

declare dso_local i32 @yy_pop_parser_stack(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
